--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
     <!-- Icon -->
     <link rel="icon" href="./icon.svg" type="image/x-icon" />
     <!-- title -->
-    <title>Portfolio Project</title>
+    <title>ReactFolio | Webdev</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
